# cpp-cuda-cmake-example-project

./: .clangd  CMakeLists.txt  CMakePresets.json  README.md
apps/: main.cpp
include/peakfinder/: cuda_status.hpp  log.hpp  peak_finder.hpp  peak_utils.hpp
src/: peak_finder.cu  peak_kernels.cu  peak_kernels.cuh  peak_utils.cpp
tests/: CMakeLists.txt  test_peak_cuda_pipeline.cpp  test_peak_utils.cpp
